# flax-nnx-multimodal

./: .gitignore  DEVELOPMENT.md  Makefile  README.md  cspell.config.yaml  pyproject.toml
planning/: design.md  requirements.md  tasks.md
src/bge_visualized_jax/: __init__.py  config.py  convert_weights.py  fusion.py  model.py  text.py  utils.py  vision.py
tests/: __init__.py  test_config.py  test_model.py
